--- a/sender/template/default_code.html
+++ b/sender/template/default_code.html
@@ -30,10 +30,10 @@
     <h1>Your Verification Code</h1>
     <p>Dear User,</p>
     <p>Thank you for signing up. Below is your verification code:</p>
-    <div class="code">{{.Code}}</div>
+    <div class="code">{{.Verify}}</div>
     <p>Please enter this code on the verification page to complete your registration.</p>
     <p>If you did not request this code, you can safely ignore this email.</p>
-    <p>Thank you,<br>{{.Name}}</p>
+    <p>Thank you,<br>Your name</p>
 </div>
 </body>
 </html>
