--- a/sender/template/default_token.html
+++ b/sender/template/default_token.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Email Verification</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-        padding: 20px;
-    }
-    .container {
-        background-color: #ffffff;
-        padding: 20px;
-        border-radius: 8px;
-        margin: auto;
-        width: 50%;
-    }
-    .button {
-        background-color: #008CBA;
-        color: white;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        border-radius: 8px;
-        border: none;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Verification</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            padding: 20px;
+        }
+
+        .container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            margin: auto;
+            width: 50%;
+        }
+
+        .button {
+            background-color: #008CBA;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+            border: none;
+        }
+    </style>
 </head>
+
 <body>
-<div class="container">
-    <h1>Verify Your Email Address</h1>
-    <p>Dear User,</p>
-    <p>Thank you for signing up. Please click the button below to verify your email address.</p>
-    <a href={{.TokenURL}} class="button">Verify Email</a>
-    <p>Thank you,<br>{{.Name}}</p>
-</div>
+    <div class="container">
+        <h1>Verify Your Email Address</h1>
+        <p>Dear User,</p>
+        <p>Thank you for signing up. Please click the button below to verify your email address.</p>
+        <a href={{.Verify}} class="button">Verify Email</a>
+        <br>
+        <p>If the button above doesn't work, click or copy and paste the following link into your browser:</p>
+        <p><a href="{{.Verify}}">{{.Verify}}</a></p>
+        <p>Thank you,<br>Your name</p>
+    </div>
 </body>
+
 </html>
